z-index fix

--- a/frontend/src/app/home/home-view/home.component.css
+++ b/frontend/src/app/home/home-view/home.component.css
@@ -91,6 +91,7 @@
     flex-direction: column;
     background-color: rgb(255, 255, 255);
     width: 80vh;
+    z-index: 10;
 }
 .filter-options-box.ng-star-inserted {
     display: flex;
